data/derived/sp14/progs/unify/prog1780.ml.out
Characters 125-126:
  let seen' = if ( List.mem ( h t ) ) then seen else h::seen in
                                ^
Error: This expression has type ('a -> 'b) list
       but an expression was expected of type 'a
       The type variable 'a occurs inside ('a -> 'b) list
